[gd_scene load_steps=5 format=3 uid="uid://1mnpb4fbr0ad"]

[ext_resource type="Theme" uid="uid://c8kq27nnhlci8" path="res://Theme/UI.theme" id="1_afetk"]
[ext_resource type="Script" path="res://Menu/Menu.gd" id="2_45gxj"]
[ext_resource type="Script" path="res://Menu/Settings.gd" id="3_xrx7v"]
[ext_resource type="PackedScene" uid="uid://cnpwcii6gyc4m" path="res://Other/SizeSettings.tscn" id="4_nv038"]

[node name="Menu" type="Control" node_paths=PackedStringArray("dataList", "teamCount", "scaleCount")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_afetk")
script = ExtResource("2_45gxj")
dataList = NodePath("CenterContainer/VBoxContainer/Data/dataList")
teamCount = NodePath("CenterContainer/VBoxContainer/HBoxContainer2/TeamCount")
scaleCount = NodePath("CenterContainer/VBoxContainer/HBoxContainer3/ScaleCount")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -29.0
offset_right = 42.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_afetk")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "justgame"
horizontal_alignment = 1

[node name="Data" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Data"]
layout_mode = 2
text = "Данные:"

[node name="dataList" type="OptionButton" parent="CenterContainer/VBoxContainer/Data"]
custom_minimum_size = Vector2(162, 0)
layout_mode = 2
tooltip_text = "Данные"
item_count = 1
popup/item_0/text = "тест"
popup/item_0/id = 0

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 1

[node name="ReloadDataButton" type="Button" parent="CenterContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Обновить"
flat = true

[node name="EditorButton" type="Button" parent="CenterContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Редактор"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Команд:"

[node name="TeamSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 26)
layout_mode = 2
min_value = 2.0
max_value = 5.0
value = 2.0
rounded = true

[node name="TeamCount" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "2"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Масштаб:"

[node name="MinusScale" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="ScaleCount" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="PlusScale" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Играть"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Выход"

[node name="Settings" type="HBoxContainer" parent="." node_paths=PackedStringArray("colorPicker")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_xrx7v")
colorPicker = NodePath("ColorPickerButton")

[node name="ColorPickerButton" type="ColorPickerButton" parent="Settings"]
layout_mode = 2
text = "Цвет фона"
edit_alpha = false

[node name="SizeSettings" parent="." instance=ExtResource("4_nv038")]
layout_mode = 1
offset_left = -108.0
offset_bottom = 41.0

[connection signal="button_down" from="CenterContainer/VBoxContainer/HSplitContainer/ReloadDataButton" to="." method="reloadDataList"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/HSplitContainer/EditorButton" to="." method="_on_EditorButton_down"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/TeamSlider" to="." method="_on_TeamSlider_value_changed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer3/MinusScale" to="." method="_on_MinusSclae_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/HBoxContainer3/PlusScale" to="." method="_on_PlusScale_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_down"]
[connection signal="color_changed" from="Settings/ColorPickerButton" to="Settings" method="_on_color_picker_button_color_changed"]
